--- a/Frontend/visaosisu/package.json
+++ b/Frontend/visaosisu/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.13.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.1"
   },
   "devDependencies": {
