--- a/Frontend/visaosisu/package.json
+++ b/Frontend/visaosisu/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.0",
     "@mui/material": "^5.13.6",
     "axios": "^1.4.0",
     "react": "^18.2.0",
