--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,11 +5,12 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsx watch src/server.ts",
-    "vercel-build": "npx prisma generate && npx prisma migrate deploy" 
+    "vercel-build": "npx prisma generate && npx prisma migrate deploy"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.14.10",
     "express-async-errors": "^3.1.1",
